--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -158,7 +158,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
-                    android:id="@+id/txt"
+                    android:id="@+id/txt2"
                     android:layout_width="wrap_content"
                     android:layout_height="80dp"
                     android:layout_gravity="end"
@@ -182,7 +182,6 @@
                 android:text="@string/Login"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
-                android:elevation="8dp"
                 android:shadowDx="3"
                 android:shadowDy="3"
                 android:textStyle="bold"
