--- a/app/src/main/res/layout/slideshow.xml
+++ b/app/src/main/res/layout/slideshow.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:scaleType="fitXY"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:id="@+id/PageViewimage"
         />
 
