--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -44,6 +44,7 @@
 
 
                 <ImageView
+
                     android:layout_width="180dp"
                     android:layout_marginStart="20sp"
                     android:src="@drawable/shotcart"
@@ -51,7 +52,7 @@
                     android:layout_height="80dp" />
 
                 <TextView
-                    android:id="@+id/txt"
+                    android:id="@+id/skiptoSignUP"
                     android:layout_width="150dp"
                     android:layout_height="80dp"
                     android:layout_marginEnd="20sp"
@@ -72,6 +73,7 @@
 
 
                 <ImageView
+                    android:id="@+id/skiptosignupimage"
                     android:layout_width="80dp"
                     android:layout_marginStart="20sp"
                     android:layout_centerInParent="true"
