--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -42,7 +42,8 @@
         android:id="@+id/linear2"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/Indictor"
@@ -50,6 +51,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="350dp"
             />
+
     </LinearLayout>
 
     <LinearLayout
