--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,10 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".View.HomePage">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".View.HomePage">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:elevation="8dp"
+            android:background="@color/white"
+            android:layout_height="70dp"
+            >
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/iconinnav"
+                    android:layout_height="match_parent" />
+
+
+
+                <ImageView
+                    android:src="@drawable/bicycleintoolbar"
+                    android:layout_width="40dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_height="match_parent" />
+
+            </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
+
+        </android.support.v7.widget.Toolbar>
+
+
+        <android.support.design.widget.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_height="65dp" />
+
+
+        <include layout="@layout/layoutin_activityhome"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="65dp"
+            android:layout_below="@+id/toolbar" />
+
+    </RelativeLayout>
+
+
+
+
+
+
+
+
+</android.support.v4.widget.DrawerLayout>
