--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -30,9 +30,9 @@
 
         <ImageView
             android:id="@+id/lrahtk_img"
-            android:layout_width="250dp"
-            android:layout_height="120dp"
-            android:src="@drawable/lrahtk"
+            android:layout_width="300dp"
+            android:layout_height="250dp"
+            android:src="@drawable/ic_lrahtk2"
             android:scaleType="fitXY"
             />
 
