--- a/app/src/main/res/layout/layoutin_activityhome.xml
+++ b/app/src/main/res/layout/layoutin_activityhome.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@color/white"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
 
@@ -15,16 +16,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content">
 
 
             <ImageView
-                android:layout_width="220dp"
-                android:layout_marginEnd="50dp"
-                android:layout_gravity="center"
+                android:layout_width="250dp"
+                android:layout_gravity="center_horizontal"
                 android:scaleType="fitXY"
-                android:src="@drawable/lerahtk"
-                android:layout_height="200dp" />
+                android:src="@drawable/ic_lrahtk"
+                android:layout_height="200dp"
+                android:layout_marginTop="8dp"/>
 
 
             
