--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="white">#ffffff</color>
     <color name="blue">#00acec</color>
 
+    <color name="bgBottomNavigation">#fe485a</color>
+
+    <color name="bacG">#514f4f</color>
+
 </resources>
