--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -177,7 +177,7 @@
                 android:layout_height="60dp"
                 android:layout_marginEnd="20sp"
                 android:layout_marginStart="20sp"
-                android:background="@drawable/loginb_button"
+                android:background="@drawable/button_background"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="62dp"
                 android:text="@string/Login"
