--- a/app/src/main/res/layout/layoutin_activityhome.xml
+++ b/app/src/main/res/layout/layoutin_activityhome.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:background="@color/white"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -63,7 +64,7 @@
                 android:layout_marginTop="8dp"/>
 
 
-            
+
             <ImageView
                 android:layout_width="300dp"
                 android:layout_gravity="center"
@@ -76,15 +77,15 @@
                 android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
-                
-                
-                
+
+
+
                 <Button
                     android:layout_marginStart="20sp"
                     android:layout_width="120dp"
                     android:text="طلباتي"
                     android:textColor="@android:color/white"
-                    android:background="@drawable/loginb_button"
+                    android:background="@drawable/button_background"
                     android:layout_height="40dp"
                     android:fontFamily="@font/cairo"
                     />
@@ -93,13 +94,13 @@
                     android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="20sp"
-                    android:background="@drawable/loginb_button"
+                    android:background="@drawable/button_background"
                     android:fontFamily="@font/cairo"
                     android:text="عرض اليوم"
-                    android:textColor="@android:color/white"
-                    />
 
-                
+                    android:textColor="@android:color/white" />
+
+
             </LinearLayout>
 
         </LinearLayout>
